fixing more style bugs on mobile

--- a/styles.scss/_add-photo.scss
+++ b/styles.scss/_add-photo.scss
@@ -1,11 +1,10 @@
 .add-photo {
-    position: absolute;
-    top: 2px;
+    position: fixed;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-50%);
     width: 100%;
     max-width: 500px;
-    margin-top: 10px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 0 999px rgba(0, 0, 0, 0.2);
