--- a/styles.scss/_header.scss
+++ b/styles.scss/_header.scss
@@ -200,6 +200,7 @@
 
                 >a {
                     display: block;
+                    text-align: center;
                     padding: 5px 15px;
 
                     background-color: white;
