--- a/styles.scss/_home.scss
+++ b/styles.scss/_home.scss
@@ -7,14 +7,14 @@
         display: flex;
         flex-direction: column;
         // position: relative;
-        padding: 80px 10px;
+        padding: 80px 10px 40px 10px;
 
         .success-message {
-            position: absolute;
-            top: 80px;
+            position: fixed;
+            top: 50%;
             left: 50%;
             width: 100%;
-            transform: translateX(-50%);
+            transform: translateX(-50%) translateY(-50%);
             visibility: hidden;
             opacity: 0;
             transition: all 0.3s ease-in-out;
